# 3DS-DevKitPro-Cmake-Template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
src/: main.cpp
